--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.sql.init.encoding=utf-8
 spring.sql.init.mode=always
 
 spring.servlet.multipart.max-file-size=5MB
+
+spring.jpa.hibernate.ddl-auto=update
